syntax = "proto3";

package elysnetwork.elys.parameter;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "elys/parameter/params.proto";
import "elys/parameter/ante_handler_param.proto";

option go_package = "github.com/elys-network/elys/x/parameter/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/elys-network/elys/parameter/params";
  
  }

  rpc AnteHandlerParamAll (QueryAllAnteHandlerParamRequest) returns (QueryAllAnteHandlerParamResponse) {
    option (google.api.http).get = "/elys-network/elys/parameter/ante_handler_param";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryAllAnteHandlerParamRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllAnteHandlerParamResponse {
  repeated AnteHandlerParam                       anteHandlerParam = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination       = 2;
}

